plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.3'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.github.dddpaul'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        url "https://artifacts.camunda.com/artifactory/camunda-identity/"
    }
}

dependencies {
    implementation "io.camunda.spring:spring-boot-starter-camunda:8.5.12"
    implementation 'io.camunda.connector:spring-boot-starter-camunda-connectors:8.5.2'
    implementation 'me.tongfei:progressbar:0.10.0'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
//    implementation 'com.github.dddpaul.camunda:connector-telegram:0.0.1-SNAPSHOT'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'io.camunda:zeebe-process-test-extension:8.4.2'
}

dependencyManagement {
    imports {
        mavenBom "org.testcontainers:testcontainers-bom:1.17.6"
    }
}

test {
    useJUnitPlatform()
}
